{
    "version": 1,
    "name": "PlayerAction",
    "maps": [
        {
            "name": "PlayerActionMap",
            "id": "e1efb5ff-4db7-4bf0-a8b8-e90c74ec2a6d",
            "actions": [
                {
                    "name": "MoveAction",
                    "type": "Value",
                    "id": "20d9ee80-d10b-47fc-be6c-af9dfafb8e6a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "JumpAction",
                    "type": "Button",
                    "id": "544c9302-f8e4-40c8-b4c4-b0f0d4d7b5be",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "6ca79894-0ed5-4f65-8daf-8d0f75027714",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "9652fea2-5e01-406c-908b-217121137dce",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e2a74721-617b-49a1-a1af-c910f5d1af8d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8851b3e6-963f-4705-a9c1-70445db9fe02",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}